--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" />
+    <!-- <meta name="viewport" content="width=1000; initial-scale=0; " /> -->
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
